Revert "design layout issues with footer fixed."
This reverts commit 564ac1c1afa828cd3a4489a7e9c64ef84c081633.

--- a/src/main/assets/scss/application.css
+++ b/src/main/assets/scss/application.css
@@ -3794,9 +3794,6 @@ p + .govuk-heading-s,
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.govuk-footer__section:first-child {
-  width: 45px;
-}
 
 .govuk-footer__section {
   display: inline-block;
@@ -8417,9 +8414,8 @@ body {
 
 @media (min-width: 1340px) {
   .ccs-width-container {
-    max-width: 960px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
+    max-width: 1280px;
   }
 }
 
