--- a/src/main/public/assets/styles/application.css
+++ b/src/main/public/assets/styles/application.css
@@ -3800,9 +3800,6 @@ p + .govuk-heading-s,
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.govuk-footer__section:first-child {
-  width: 45px;
-}
 
 .govuk-footer__section {
   display: inline-block;
@@ -8445,9 +8442,8 @@ body {
 
 @media (min-width: 1340px) {
   .ccs-width-container {
-    max-width: 960px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
+    max-width: 1280px;
   }
 }
 
